--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <h1>AI Inspirational Quote Generator</h1>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/janeosa/" target="_blank">Jane Ighodaro</a>,
+      is open sourced on
+      <a
+        href="https://github.com/janeosa/Inspirational-Quote-Generator"
+        target="_blank"
+        >Github</a
+      >
+      and hosted on
+      <a
+        href="https://inspirational-quote-generator-by-jane.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
