--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>AI Inspirational Quote Generator</h1>
+    <header><h1>AI Inspirational Quote Generator</h1></header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic you want your quote to be based on"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+    </main>
+    <div>
+      Life isn't about finding yourself.
+      <br />
+      Life is about creating yourself.
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/janeosa/" target="_blank">Jane Ighodaro</a>,
